--- a/OpenCV_practicals.ipynb
+++ b/OpenCV_practicals.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import matplotlib.pyplot"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -176,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0xdd45850>"
+       "<matplotlib.image.AxesImage at 0xc87b7c0>"
       ]
      },
      "execution_count": 7,
@@ -199,7 +199,6 @@
    "source": [
     "# opencv reads image in BGR format, coverting it into RGB\n",
     "img2 = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
-    "import matplotlib.pyplot as plt\n",
     "plt.imshow(img2)"
    ]
   },
@@ -464,9 +463,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "d189b86f12b80f268451b2d170679a022e34184046d8fa76ce24ac52088e0fdc"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.2 32-bit",
    "name": "python3"
   },
   "language_info": {
